--- a/WSR_Airlines/WSR_Airlines.csproj
+++ b/WSR_Airlines/WSR_Airlines.csproj
@@ -70,6 +70,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MainSet.cs">
+      <DependentUpon>MainSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="MainSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
