--- a/WSR_Airlines/WSR_Airlines.csproj
+++ b/WSR_Airlines/WSR_Airlines.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Domain\Helper.cs" />
+    <Compile Include="UserMenuWindow.xaml.cs">
+      <DependentUpon>UserMenuWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="AdminAddUserWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -96,6 +100,10 @@
       <DependentUpon>AuthWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UserMenuWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\User.cs" />
